--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@ layout: pages
 title: Anran's Life
 ---
 
+<ul id="items">
 {% for post in site.posts %}
- <div class="item">
-   <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
-   <ul class="meta">
-     <li class="timestamp">{{ post.date | date_to_long_string }}</li>
-     <li class="category">{{ post.categories | join('.') }}</li>
-     <li class="tags">{{ post.tags | sort}}</li>
-   </ul>
-   <p class="content">{{ post.excerpt | remove: '<p>' | remove: '</p>' }}</p>
-   <a class="whole-article-promote" href="{{ post.url }}">阅读全文</a>
- </div>
+  <li> 
+    <a href="{{ post.url }}">
+      <h2 class="title">{{ post.title }}</h2>
+      <small class="meta">
+        <span class="timestamp">{{ post.date | date_to_long_string }}</span>&nbsp;in&nbsp;
+        {% for cate in post.categories %}
+        <span class="category">{{ cate }}</span>
+        {% endfor %}
+      </small>
+    </a>
+  </li>
 {% endfor %}
+ </ul>
