puzzle game: optimize

--- a/404.html
+++ b/404.html
@@ -13,6 +13,7 @@
 
     #game {
       margin: 0 auto;
+      margin-top: 20%;
     }
 
     .block {
@@ -27,7 +28,9 @@
     (function () {
        NPuzzle({
         'id': 'game',
-        'blend': 1000
+        'level': 4,
+        'blend': 1000,
+        'width': 240
       }); 
     })();
 
